Broken animation when saving file with NLA tweak mode entered #120574

Closed
opened 2024-04-12 15:20:02 +02:00 by Simon Thommes · 0 comments
Member

System Information
Operating system: Linux-6.7.11-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.67

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-11 21:26, hash: 52cff75ce080
Worked: (newest version of Blender that worked as expected)

Short description of error

A file was saved with NLA tweak mode and on load the animation seems to be broken. This state also propagates into the lighting file, where the armature object with the animation is linked and it looks like NLA tweak mode is while the operator to exit is not available. Running the operator to enter the tweak mode fixes the issue.

I talked about this with @mont29 @dr.sybren @nathanvegdahl
Conclusion so far was that it's probably best to ensure that the file is not saved in NLA mode, but a flag is used to re-enter it on file load, consistent with how it is done for other edit modes in Blender. That would avoid this issue in the first place. See #120573

But it might still be interesting to investigate the bug separately.

Exact steps for others to reproduce the error
Blender Studio production file on project Gold SVN:
pro/shots/240_0030/240_0030-anim.blend / pro/shots/240_0030/240_0030-lighting.blend rev. 2508

**System Information** Operating system: Linux-6.7.11-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.67 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-11 21:26, hash: `52cff75ce080` Worked: (newest version of Blender that worked as expected) **Short description of error** A file was saved with NLA tweak mode and on load the animation seems to be broken. This state also propagates into the lighting file, where the armature object with the animation is linked and it looks like NLA tweak mode is while the operator to exit is not available. Running the operator to enter the tweak mode fixes the issue. <video src="/attachments/0e636e91-440e-48a9-a982-914b4e88f799" title="bug-broken_anim_nla_tweak-2024-04-12_15.16.18.mp4" controls></video> I talked about this with @mont29 @dr.sybren @nathanvegdahl Conclusion so far was that it's probably best to ensure that the file is not saved in NLA mode, but a flag is used to re-enter it on file load, consistent with how it is done for other edit modes in Blender. That would avoid this issue in the first place. See #120573 But it might still be interesting to investigate the bug separately. **Exact steps for others to reproduce the error** Blender Studio production file on project Gold SVN: `pro/shots/240_0030/240_0030-anim.blend` / `pro/shots/240_0030/240_0030-lighting.blend` `rev. 2508`
Simon Thommes added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-12 15:20:03 +02:00
Sybren A. Stüvel added
Status
Confirmed
Priority
High
and removed
Status
Needs Triage
Priority
Normal
labels 2024-04-12 15:22:02 +02:00
Iliya Katushenock added the
Module
Animation & Rigging
label 2024-04-12 15:30:03 +02:00
Sybren A. Stüvel self-assigned this 2024-04-19 17:24:50 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-22 14:56:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120574
No description provided.